force-app/main/default/objects/User/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Field to log changes such as non-login deactivation warnings and actual deactivations</description>
    <label>Note</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>