force-app/main/default/objects/User/fields/SDR_Paired__c.field-meta.xml
<CustomField>
    <fullName>SDR_Paired__c</fullName>
    <description>SDR who will work leads and contacts assigned to this AE.</description>
    <inlineHelpText>SDR who will work leads and contacts assigned to this AE.</inlineHelpText>
    <label>SDR Paired</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>SDR</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <relationshipName>SDR_Paired</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>