force-app/main/default/objects/User/fields/Territory_in_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_in_Region__c</fullName>
    <description>Comma separated list of countries or states to be used for account assignment</description>
    <inlineHelpText>Comma separated list of countries or states to be used for account assignment</inlineHelpText>
    <label>Territory in Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>